# remoteimpact

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
.claude/: settings.local.json
gigs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
gigs/migrations/: 0001_initial.py  0002_giginterest_and_more.py
gigs/tests/: test_gigs.py
jobboard/: settings.py  urls.py
jobs/: admin.py  ai.py  apps.py  constants.py  context_processors.py  feeds.py  forms.py  models.py  signals.py  sitemaps.py  urls.py  utils.py  views_old.py.bak
jobs/constants/: __init__.py  skills.py
jobs/migrations/: 0001_initial.py  0002_job_external_id_job_raw_data_job_source_and_more.py  0003_alter_job_source.py  0004_purposeprofile_sprint_story_storyresonance_userpath_and_more.py  0005_alter_job_source_savedjob.py  0006_job_benefits_job_company_description_and_more.py  0007_sprint_is_featured_sprint_is_paid_and_more.py  0008_job_poster_application.py  0009_organization_members_userprofile.py  0010_organization_verification_status_userprofile_country.py  0011_add_greenhouse_lever_ashby_sources.py  0012_add_probablygood_source.py  0013_add_impact_match_models.py  0014_add_skills_to_job.py  0015_add_assistant_subscription.py  0016_add_assistant_generation.py  0017_add_newsletter_fields.py  0018_fix_url_field_lengths.py  0019_increase_field_lengths.py  0020_add_vector_search_fields.py  0021_add_newsletter_subscriber.py  (+1 more)
scripts/: DEPLOYMENT.md  bulk_import.sh  daily_import.sh
static/: robots.txt
templates/: base.html
(+112 files in other folders)
